force-app/main/default/objects/SPEN_Land_Interest__c/SPEN_Land_Interest__c.object-meta.xml
<CustomObject>
    <description>Created as part of ESC-122.</description>
    <label>Land Right</label>
    <nameField>
        <label>Land Right Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Rights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>