force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_AlternativePayeeExist__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AlternativePayeeExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Payee Exist</label>
    <type>Checkbox</type>
</CustomField>