force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Annual_Wayleave_Payment_Payable__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Annual_Wayleave_Payment_Payable__c</fullName>
    <label>Contract Payment Date</label>
    <type>Date</type>
</CustomField>