force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Apparatus_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Apparatus_Description__c</fullName>
    <label>Apparatus Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>