force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ApproximateCableLengthonProperty__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApproximateCableLengthonProperty__c</fullName>
    <label>Approximate Cable Length (m) on Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>