force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Compulsory_Consent_Action__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Compulsory_Consent_Action__c</fullName>
    <label>Compulsory Consent Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Written Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>