force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_CompulsoryStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompulsoryStatus__c</fullName>
    <label>Statutory Land Right Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Design</fullName>
                <color>#FF6A3B</color>
                <label>Awaiting Design</label>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
                <color>#86B8D6</color>
                <label>In Negotiation</label>
            </value>
            <value>
                <fullName>In Preparation</fullName>
                <color>#F6B283</color>
                <label>In Preparation</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <color>#FFA16D</color>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Objected</fullName>
                <color>#F07B2B</color>
                <label>Objected</label>
            </value>
            <value>
                <fullName>In Hearing</fullName>
                <color>#8BABD5</color>
                <label>In Hearing</label>
            </value>
            <value>
                <fullName>In Written Representation</fullName>
                <color>#8BABD5</color>
                <label>In Written Representation</label>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
                <color>#FF6A3B</color>
                <label>Awaiting Decision</label>
            </value>
            <value>
                <fullName>Decision Received</fullName>
                <color>#C3E98A</color>
                <label>Decision Received</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#5C881A</color>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>