force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ConsentAcquiredDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentAcquiredDate__c</fullName>
    <label>Consent Acquired Date</label>
    <type>Date</type>
</CustomField>