force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ConsentIssueDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentIssueDate__c</fullName>
    <label>Consent Issue Date</label>
    <type>Date</type>
</CustomField>