force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ConsentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConsentType__c</fullName>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easement</fullName>
                <color>#A5DD50</color>
                <label>Easement</label>
            </value>
            <value>
                <fullName>Servitude</fullName>
                <color>#5C881A</color>
                <label>Servitude</label>
            </value>
            <value>
                <fullName>Wayleave</fullName>
                <color>#F07B2B</color>
                <label>Wayleave</label>
            </value>
            <value>
                <fullName>Lease</fullName>
                <color>#C3E98A</color>
                <label>Lease</label>
            </value>
            <value>
                <fullName>Freehold</fullName>
                <color>#A6A6A6</color>
                <label>Freehold</label>
            </value>
            <value>
                <fullName>CPO</fullName>
                <color>#B9CDE6</color>
                <label>CPO</label>
            </value>
            <value>
                <fullName>DCO</fullName>
                <color>#8BABD5</color>
                <label>DCO</label>
            </value>
            <value>
                <fullName>NWL</fullName>
                <color>#4A7CBE</color>
                <label>NWL</label>
            </value>
            <value>
                <fullName>Close Coupled Lease</fullName>
                <color>#F6B283</color>
                <label>Close Coupled Lease</label>
            </value>
            <value>
                <fullName>Incorporated Rights</fullName>
                <color>#FFA16D</color>
                <label>Incorporated Rights</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>