force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>