force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contract_Type__c</fullName>
    <formula>CASE( SPEN_ConsentType__c , &apos;Lease&apos;, &apos;Lands Contracts&apos;,&apos;UK Wayleave Contracts&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>