force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Contract_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contract_Valid_From__c</fullName>
    <formula>SPEN_Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Valid From</label>
    <type>Date</type>
</CustomField>