force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ContractStatusLastSync__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContractStatusLastSync__c</fullName>
    <label>Contract Status Last Synchronised</label>
    <type>DateTime</type>
</CustomField>