force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Corridor_Width_Consent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Corridor_Width_Consent__c</fullName>
    <label>Corridor Width Consent</label>
    <length>30</length>
    <type>Text</type>
</CustomField>