force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DecisionDate__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>