force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Determine_Arbitration_Act__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Determine_Arbitration_Act__c</fullName>
    <formula>IF(ISPICKVAL( SPEN_Job__r.SPEN_LicenseArea__c ,&apos;SPD&apos;),&apos;Arbitration Act Scotland (2010)&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPT&apos;),&apos;Arbitration Act Scotland (2010)&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPM&apos;),&apos;Arbitration Act 1996&apos;,&apos;&apos;)) )</formula>
    <label>Determine Arbitration Act</label>
    <type>Text</type>
</CustomField>