force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Determine_Society_for_consent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Determine_Society_for_consent__c</fullName>
    <formula>IF(ISPICKVAL( SPEN_Job__r.SPEN_LicenseArea__c ,&apos;SPD&apos;),&apos;Law Society of Scotland&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPT&apos;),&apos;Law Society of Scotland&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPM&apos;),&apos;Law Society of England and Wales&apos;,&apos;&apos;)) )</formula>
    <label>Determine Society for consent</label>
    <type>Text</type>
</CustomField>