force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_DraftDocumentAgreedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DraftDocumentAgreedDate__c</fullName>
    <label>Draft Document Agreed Date</label>
    <type>Date</type>
</CustomField>