force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_DraftDocumentIssued__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DraftDocumentIssued__c</fullName>
    <description>Field for ESC-114 Report: Elapsed Time between Legal Dates</description>
    <formula>SPEN_DraftdocumentsIssuedDate__c -  SPEN_InternalLegalInstructExternalTeam__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Document Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>