force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_DraftdocumentsIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DraftdocumentsIssuedDate__c</fullName>
    <label>Draft documents Issued Date</label>
    <type>Date</type>
</CustomField>