force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Existing_Refurb_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Existing_Refurb_Status__c</fullName>
    <label>Existing/Refurb Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Design</fullName>
                <color>#FF6A3B</color>
                <label>Awaiting Design</label>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
                <color>#86B8D6</color>
                <label>In Negotiation</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#5C881A</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Land Right Confirmed</fullName>
                <color>#73A616</color>
                <label>Land Right Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>