force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ExistingLandRight__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExistingLandRight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Land Right (Reference)</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Land Rights</relationshipLabel>
    <relationshipName>Land_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>