force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_GIS_URL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GIS_URL__c</fullName>
    <formula>IF( SPEN_Land__r.SPEN_OSGridReferenceParcel__c != NULL,HYPERLINK(&quot;https://swarcgs23384p16.euro.iberdrola.local/land_gis/?center=&quot;+ SPEN_Land__r.SPEN_OSGridReferenceParcel__c+&quot;,27700&amp;scale=750&quot;, &quot;Go to Land&quot;) , 
 IF(SPEN_Land__r.SPEN_OSGridReferenceParcel__c == NULL &amp;&amp;  SPEN_Job__r.SPEN_OSGridReference__c != NULL, HYPERLINK(&quot;https://swarcgs23384p16.euro.iberdrola.local/land_gis/?center=&quot;+SPEN_Job__r.SPEN_OSGridReference__c+&quot;,27700&amp;scale=750&quot;, &quot;Go to Land&quot;), &quot;&quot;

 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIS URL</label>
    <type>Text</type>
</CustomField>