force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_GISURL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GISURL__c</fullName>
    <label>GIS URL</label>
    <type>Url</type>
</CustomField>