force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_GrantorRAG__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GrantorRAG__c</fullName>
    <formula>IF(ISPICKVAL(SPEN_GrantorRAGStatus__c, &quot;Red&quot;) , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;RED&quot;,25,25),
IF(ISPICKVAL(SPEN_GrantorRAGStatus__c, &quot;Amber&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;AMBER&quot;,25,25),
IF(ISPICKVAL(SPEN_GrantorRAGStatus__c, &quot;Green&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;GREEN&quot;,25,25), &apos;&apos;) ) )</formula>
    <label>Land Contact RAG</label>
    <type>Text</type>
</CustomField>