force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_GrantorRAGStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GrantorRAGStatus__c</fullName>
    <description>Created as part of ESC-121</description>
    <label>Land Contact RAG Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <color>#F07B2B</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#73A616</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>