force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_HeadofTermAgreedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HeadofTermAgreedDate__c</fullName>
    <label>Head of Term Agreed Date</label>
    <type>Date</type>
</CustomField>