force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_InternalLegalInstructExternalTeam__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InternalLegalInstructExternalTeam__c</fullName>
    <label>Legal Instruction Received</label>
    <type>Date</type>
</CustomField>