force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_InternalLegalInstructionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InternalLegalInstructionDate__c</fullName>
    <label>Internal Legal Instruction Date</label>
    <type>Date</type>
</CustomField>