force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Job__c</fullName>
    <label>Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipName>Land_Interests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>