force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Land__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Land</label>
    <referenceTo>SPEN_Land__c</referenceTo>
    <relationshipName>Land_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>