force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Land_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Interest_Type__c</fullName>
    <description>Created as part of ESC-122.</description>
    <label>Land Right Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <color>#A5DD50</color>
                <label>Owner</label>
            </value>
            <value>
                <fullName>Occupier</fullName>
                <color>#73A616</color>
                <label>Occupier</label>
            </value>
            <value>
                <fullName>Owner-Occupier</fullName>
                <color>#5C881A</color>
                <label>Owner-Occupier</label>
            </value>
            <value>
                <fullName>Unknown Owner</fullName>
                <color>#F07B2B</color>
                <label>Unknown Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>