force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Land_Right_Acquired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Right_Acquired__c</fullName>
    <label>Land Right Acquired</label>
    <type>Date</type>
</CustomField>