force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LandAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandAddress__c</fullName>
    <formula>SPEN_Land__r.SPEN_Address__c</formula>
    <label>Grantor Name and Address</label>
    <type>Text</type>
</CustomField>