force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LandInterestTitle__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterestTitle__c</fullName>
    <label>Land Legal Title Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>