force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LandLegalTitleNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandLegalTitleNumber__c</fullName>
    <formula>SPEN_Land__r.SPEN_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Land Legal Title Number</label>
    <type>Text</type>
</CustomField>