force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LandTitle__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandTitle__c</fullName>
    <formula>SPEN_Job__r.SPEN_JobTitle__c</formula>
    <label>Land Title</label>
    <type>Text</type>
</CustomField>