force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LegalInstructionTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LegalInstructionTime__c</fullName>
    <description>Field for ESC-114 Report: Elapsed Time between Legal Dates</description>
    <formula>SPEN_InternalLegalInstructExternalTeam__c -  SPEN_InternalLegalInstructionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Instruction Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>