force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LegalMilestonesCompleted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LegalMilestonesCompleted__c</fullName>
    <label>Legal Invoicing Complete</label>
    <type>Date</type>
</CustomField>