force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LegalSignedDocumentReturnDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LegalSignedDocumentReturnDate__c</fullName>
    <label>Signed Legal Document Returned</label>
    <type>Date</type>
</CustomField>