force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LenderConsentRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LenderConsentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lender Consent Required</label>
    <type>Checkbox</type>
</CustomField>