force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LI_License_Area__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LI_License_Area__c</fullName>
    <formula>TEXT( SPEN_Job__r.SPEN_LicenseArea__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Area</label>
    <type>Text</type>
</CustomField>