force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Licence_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Licence_Area_Code__c</fullName>
    <formula>CASE( TEXT(SPEN_Job__r.SPEN_LicenseArea__c) , 
      &apos;SPD&apos;, &apos;8301&apos;, 
      &apos;SPT&apos;, &apos;8302&apos;,
      &apos;SPM&apos;, &apos;8303&apos;, 
      &apos;SPM 132&apos;, &apos;8303&apos;,
      &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licence Area Code</label>
    <type>Text</type>
</CustomField>