force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_LIStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LIStatus__c</fullName>
    <description>Primary Status on Land Right based on consent type and Record type</description>
    <formula>CASE(  RecordType.DeveloperName  , 
 	&quot;SPEN_Wayleave&quot;,   TEXT(SPEN_WayleaveStatus__c) , 	
	&quot;SPEN_Servitude&quot;, TEXT(SPEN_ServitudeStatus__c) ,
	&quot;SPEN_Statutory&quot;, TEXT(SPEN_CompulsoryStatus__c) ,
        &quot;SPEN_Existing&quot;, TEXT(SPEN_Existing_Refurb_Status__c),
	&quot;Closed&quot; )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>