force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Milestone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>SPEN_Job_Milestone__c</referenceTo>
    <relationshipName>Land_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>