force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ModificationReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ModificationReason__c</fullName>
    <description>Created as part of ESC-65</description>
    <label>Modification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of consent type</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>