force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_NameOnConsent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NameOnConsent__c</fullName>
    <label>Named on Consent (DoG/DoS/Lease)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>