force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_PreparationStartDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreparationStartDate__c</fullName>
    <label>Preparation Start Date</label>
    <type>Date</type>
</CustomField>