force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ReasonForConsentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonForConsentType__c</fullName>
    <label>Reason for Consent Type Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business request (PM)</fullName>
            </value>
            <value>
                <fullName>Reduction in Rights compliance</fullName>
            </value>
            <value>
                <fullName>Landowner unwilling to grant DoS / Easement</fullName>
            </value>
            <value>
                <fullName>Landowner unwilling to grant WL</fullName>
            </value>
            <value>
                <fullName>Landowner unwilling to grant voluntary land right</fullName>
            </value>
            <value>
                <fullName>Statutory Land Rights not compliant with programme</fullName>
            </value>
            <value>
                <fullName>Landowner has requested a permanent land right</fullName>
            </value>
            <value>
                <fullName>Project has requested a permanent land right</fullName>
            </value>
            <value>
                <fullName>Servitude/Easement not completed</fullName>
            </value>
            <value>
                <fullName>Voluntary permanent land right secured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>