force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ReasonforLIClosure__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReasonforLIClosure__c</fullName>
    <label>Reason for Land Right Closure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Withdrawn</fullName>
            </value>
            <value>
                <fullName>Landowner Refused - General</fullName>
            </value>
            <value>
                <fullName>Land Owner Refused - Historical Instance</fullName>
            </value>
            <value>
                <fullName>Land Consent Issue</fullName>
            </value>
            <value>
                <fullName>Business Re-Design</fullName>
            </value>
            <value>
                <fullName>Programmed Refresh</fullName>
            </value>
            <value>
                <fullName>Change of Owner</fullName>
            </value>
            <value>
                <fullName>Raised in Error</fullName>
            </value>
            <value>
                <fullName>Cancelled - Signed with Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>