force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_RedesignStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RedesignStatus__c</fullName>
    <formula>IF( AND(NOT(ISNULL(SPEN_RedesignRequestedDate__c)), ISNULL( SPEN_RedesignCompletedDate__c)) ,&quot;Redesign Requested&quot;, IF(AND(NOT(ISNULL(SPEN_RedesignRequestedDate__c)), NOT(ISNULL( SPEN_RedesignCompletedDate__c))), &quot;Redesign Completed&quot;, &quot;&quot;))</formula>
    <label>Redesign Status</label>
    <type>Text</type>
</CustomField>