force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Registered_Number__c</fullName>
    <formula>IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c ,&apos;SPD&apos;),&apos;Registered Number 189125&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPT&apos;),&apos;Registered Number 189126&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPM&apos;),&apos;Registered Number 2366937&apos;,&apos;&apos;)))</formula>
    <label>Registered Number</label>
    <type>Text</type>
</CustomField>