force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_Registered_Office__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Registered_Office__c</fullName>
    <formula>IF(ISPICKVAL( SPEN_Job__r.SPEN_LicenseArea__c ,&apos;SPD&apos;),&apos;SPD - 320 St Vincent Street, Glasgow. G2 5AD&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPT&apos;),&apos;SPT - 320 St Vincent Street, Glasgow. G2 5AD&apos;,IF(ISPICKVAL(SPEN_Job__r.SPEN_LicenseArea__c,&apos;SPM&apos;),&apos;SPM - 3 Prenton Way, Prenton, Wirral. CH43 3ET&apos;,&apos;&apos;)) )</formula>
    <label>Registered Office</label>
    <type>Text</type>
</CustomField>