force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_RentalObjectNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RentalObjectNumber__c</fullName>
    <description>ESC-1748</description>
    <label>Rental Object Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>