force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_RIRReceived__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RIRReceived__c</fullName>
    <label>RIR Received</label>
    <type>Date</type>
</CustomField>