force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_RIRRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RIRRequired__c</fullName>
    <formula>SPEN_Job__r.SPEN_WorkCategory__r.SPEN_RIRRequired__c</formula>
    <label>RIR Required?</label>
    <type>Checkbox</type>
</CustomField>