force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SAPContract__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SAPContract__c</fullName>
    <externalId>true</externalId>
    <label>SAP Contract</label>
    <length>100</length>
    <type>Text</type>
</CustomField>