force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SAPContractError__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SAPContractError__c</fullName>
    <description>SAP Contract Error</description>
    <label>SAP Contract Error</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>