force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SAPContractInitiated__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SAPContractInitiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAP Contract Initiated</description>
    <label>SAP Contract Initiated</label>
    <type>Checkbox</type>
</CustomField>