force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SAPContractStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SAPContractStatus__c</fullName>
    <label>SAP Contract Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>