force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_ServitudeStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ServitudeStatus__c</fullName>
    <label>Permanent Land Right Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Design</fullName>
                <color>#FF6A3B</color>
                <label>Awaiting Design</label>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
                <color>#86B8D6</color>
                <label>In Negotiation</label>
            </value>
            <value>
                <fullName>HoTs Agreed</fullName>
                <color>#B9CDE6</color>
                <label>HoTs Agreed</label>
            </value>
            <value>
                <fullName>Internal Legal Instructed</fullName>
                <color>#FFE653</color>
                <label>Internal Legal Instructed</label>
            </value>
            <value>
                <fullName>Internal Legal Instruct External Legal Team</fullName>
                <color>#FFE237</color>
                <label>Internal Legal Instruct External Legal Team</label>
            </value>
            <value>
                <fullName>Draft Documents Issued</fullName>
                <color>#F2CF00</color>
                <label>Draft Documents Issued</label>
            </value>
            <value>
                <fullName>Draft Documents Agreed</fullName>
                <color>#FFC000</color>
                <label>Draft Documents Agreed</label>
            </value>
            <value>
                <fullName>Legal Milestones Complete</fullName>
                <color>#A4BA08</color>
                <label>Legal Milestones Complete</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#5C881A</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Signed Legal Document Returned</fullName>
                <isActive>false</isActive>
                <label>Signed Legal Document Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>