force-app/main/default/objects/SPEN_Land_Interest__c/fields/SPEN_SignedLegaldocReturned__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SignedLegaldocReturned__c</fullName>
    <description>Field for ESC-114 Report: Elapsed Time between Legal Dates</description>
    <formula>SPEN_LegalSignedDocumentReturnDate__c -  SPEN_DraftDocumentAgreedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Legal Document Returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>